# neurommind-mapper

./: .gitignore  README.md  app.py  enterprise-cloud-playbook.md  pyproject.toml
src/: main.py  utils.ph  utils.py
src/neurommind_mapper/: __init__.py  main.py
